Contrast fixed

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
     /* Define style variables for easy theme management */
-    --primary-color: #567b88; /*Slate Gray*/
+    --primary-color: #3a697a; /*Slate Gray*/
     --secondary-color: #749c75; /*Asparagus*/
     --accent1-color: #fff8ee; /*Floral White*/
     --accent2-color: #7f6f62; /*Cinereous*/
@@ -105,7 +105,7 @@ article {
     padding: 16px;
     width: 800px;
     text-align: center;
-    background-color: #567b88d8;
+    background-color: #3a697ad8;
     margin: 0;
 }
 article p {
